--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,15 @@
         }
     ],
     "require": {
-        "vlucas/phpdotenv": "^3.4"
+        "vlucas/phpdotenv": "^3.4",
+        "phpstan/phpstan": "^0.11.15"
     },
     "autoload": {
         "psr-4": {
             "lokothodida\\Greeting\\": "src"
         }
+    },
+    "autoload-dev": {
+        "classmap": ["test"]
     }
 }
