--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "require": {
         "vlucas/phpdotenv": "^3.4",
-        "phpstan/phpstan": "^0.11.15"
+        "phpstan/phpstan": "^0.11.15",
+        "php": "7.3.0"
     },
     "autoload": {
         "psr-4": {
